# adventofcode2021

./: README.md  aoc2021.sln  pyproject.toml
2020-warmup/day1-2020/: Program.cs  day1-2020.csproj
2020-warmup/day2-2020/: Program.cs
2020-warmup/day3-2020/: day3-2020.csproj
2020-warmup/day4-2020/: Program.cs  day4-2020.csproj
2020-warmup/day5-2020/: day5-2020.csproj
2020-warmup/day6-2020/: day6-2020.csproj
aoclib/: Utils.cs  aoclib.csproj
day1/: Program.cs  puzzles-d1-sonar-sweep.txt
day10/: Program.cs
day2/: Program.cs  readme-day2-track-submarine-3vars.txt
day2-2020/: day2-2020.csproj
day3/: Program.cs  readme-day3-oxygen-co2-bit-counting.txt
day3-2020/: Program.cs  day3-2020.csproj
day4/: Program.cs  day4.csproj  readme-day4-bingo-with-squid.txt
day4-2020/: Program.cs  day4-2020.csproj
day5/: Program.cs  readme-day5-dangerous-crossings.txt
day5-2020/: Program.cs  day5-2020.csproj
day6/: Program.cs  day6.csproj
day6-2020/: Program.cs  day6-2020.csproj
day7/: Program.cs
day8/: Program.cs
day9/: Program.cs  day9.py
