[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-image = "^0.19.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
